static/css/style.css
body {
    font-family: Lato, Dancing Script, Sans-serif;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

html, body {
    scroll-behavior: smooth;
}

main {
    flex: 1 0 auto;
    margin-top: 25px;
}

nav li a {
    font-size: 20px;
    font-weight: 700;
    color: #E71D36;
}

nav i {
    color: #E71D36;
}

.sidenav h4 {
    color: #E71D36;
    font-family: Dancing Script, Lato, Sans-serif;
    font-weight: 700;
    margin-left: 30px;
}

.sidenav li a {
    color: #033F63;
    font-size: 18px;
}

#nav-logo {
    margin-top: 10px;
    height: 80px;
    width: 80px;
}

.home-page p {
    font-size: 25px;
    font-weight: 700;
    color: #033F63;
}

#login-btn {
    background-color: #033F63;
    color: #FFFFFF;
    width: 175px;
    margin: 5px;
}

#register-btn {
    background-color: #E71D36;
    color: #FFFFFF;
    width: 175px;
    margin: 5px;
}

#profile-btn {
    background-color: #033F63;
    color: #FFFFFF;
    width: 175px;
    margin: 5px;
}

#recipes-btn {
    background-color: #E71D36;
    color: #FFFFFF;
    width: 175px;
    margin: 5px;
}

#bg-image {
    background: url(../images/strawberries.jpg) no-repeat center center fixed;
    background-color: rgba(255, 255, 255, 0.8);
    background-blend-mode: lighten;
    background-size: cover;
}

.page-footer {
    background-color: rgba(231, 29, 54, 0.4);
    color: #FFFFFF;
    margin-top: 50px;
}

.social-media i {
    color: #FFFFFF;
}

.icon-bg {
    padding: 10px;
    margin: 0 5px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: #E71D36;
}

.icon-bg:hover {
    background-color: #033F63;
}

.page-title {
    font-family: Dancing Script, Lato, Sans-serif;
    font-weight: 700;
    color: #E71D36;
}

.input-field i {
    color: #033F63;
}

.account-form button[type="submit"] {
    background-color: #E71D36;
    color: #FFFFFF;
    font-size: 18px;
    margin: 5px;
}

.account-form placeholder {
    color: #033F63;
    font-weight: 700;
}

.input-field label {
    color: #033F63;
}

.input-field .prefix.active {
    color: #033F63;
}

.flash-message {
    font-family: Lato, Dancing Script Sans-serif;
    margin: 30px 5px -60px 5px;
    line-height: 2;
    font-weight: 700;
    color: #033F63;
}

.log-reg-p {
    font-weight: 700;
    color: #033F63;
    font-size: 22px;
}

.log-reg-p a:hover {
    text-decoration: underline;
}

.card-title {
    background-color: rgba(231, 29, 54, 0.4);
    width: 100%;
    text-align: right;
    font-size: 16px !important;
    font-weight: 700 !important;
}

.food-image {
    float: left;
    width:  350px;
    height: 250px;
    object-fit: cover;
}

#reset-btn {
    background-color: #E71D36;
    color: #FFFFFF;
}

#search-btn {
    background-color: #033F63;
}

#search-btn i {
    color: #FFFFFF;
}

.recipe-desc { 
    font-size: 22px;
    color: #033F63;
    font-weight: 700;
}

.recipe-details {
    color: #033F63;
    font-size: 18px;
}

.recipe-details i {
    margin: 0px 10px 0px 10px;
}

.recipe-details li {
    display: inline-block;
}

.recipe-border {
    padding: 2px;
    border: 5px solid #E71D36;
}

.ingredient-list li {
    margin-top: 10px;
    font-size: 18px;
    font-weight: 700;
    color: #033F63;
}

.method-list li {
    margin-top: 20px;
    font-size: 18px;
    font-weight: 700;
    color: #033F63;
}

ol, ul {
    padding-left: 10px;
}

#add-ingredient {
    background-color: #033F63;
}

#remove-ingredient {
    background-color: #E71D36;
}

#add-ingredient i {
    color: #FFFFFF;
    margin-left: 5px;
}

#remove-ingredient i {
    color: #FFFFFF;
    margin-left: 5px;
}

#add-method {
    background-color: #033F63;
}

#remove-method {
    background-color: #E71D36;
}

#add-method i {
    color: #FFFFFF;
    margin-left: 5px;
}

#remove-method i {
    color: #FFFFFF;
    margin-left: 5px;
}

